
- Renamed AppBase to ApplicationBase and moved to common.

- UDP: added option to specify the source address of the sent datagram

- UDPBasicBurst: added bool parameter: excludeLocalDestAddresses

- UDPVideoStreamCli: uses stages in initialize

- UDPApp*: Added AppBase and subclassed UDP apps from it.
  Bind sockets at startTime and close at stopTime

- EtherApp* bugfixes

- registerSignal() calls moved from initialize() to static variable declaration

- Added/fixed @signal declarations, fixed type of emitted values

- httptools: removed the fileExists() function

- New logging mechanism + EV handling in preparation for the new OMNeT++ 5.0 
  logging mechanism.

- IPv4Route/IPv6Route: added administrative distance field

- Added IPv6 header serializer (so ext interfaces can be used with IPv6 too)

- Invalid access of message pointers fixed in: OSPF, SCTP, DHCP, PingApp

- Battery: code review, small fixes.

- Revised init stages in all modules

- Added Stanford University Interim radio propagation model by Konrad Polys, Krzysztof Grochla

- Many smaller fixes and improvements (see the ChangeLog files for further detail.)


INET-2.2.0 (August 22, 2013)
----------------------------

The main highlight of this release is the long-sought support for
simulating node shutdown/restart events for network nodes.

New features:

1. Lifecycle infrastructure.

   For node shutdown/crash/startup/etc, a LifecycleOperation (e.g.
   NodeShutdownOperation) is applied to the submodule tree of the  node
   (host or router) by LifecycleController. Each module can decide how
   to handle the operation and how to store the resulting state (up/down,etc).
   Operations can be multi-stage, and don't need to complete immediately
   (i.e. they can take nonzero simulation time and multiple events to complete).

   Network nodes now also have a status submodule (type NodeStatus) with the sole
   purpose of storing the whole node's status (up/down) and displaying it
   via icons.
