@@ -72,6 +72,7 @@ const char *TCPConnection::eventName(int event)
         CASE(TCP_E_CLOSE);
         CASE(TCP_E_ABORT);
         CASE(TCP_E_STATUS);
+        CASE(TCP_E_QUEUE_BYTES_LIMIT);
         CASE(TCP_E_RCV_DATA);
         CASE(TCP_E_RCV_ACK);
         CASE(TCP_E_RCV_SYN);
@@ -103,6 +104,7 @@ const char *TCPConnection::indicationName(int code)
         CASE(TCP_I_CONNECTION_RESET);
         CASE(TCP_I_TIMED_OUT);
         CASE(TCP_I_STATUS);
+        CASE(TCP_I_SEND_MSG);
     }
     return s;
 #undef CASE
@@ -292,13 +294,14 @@ void TCPConnection::signalConnectionTimeout()
     sendIndicationToApp(TCP_I_TIMED_OUT);
 }
 
-void TCPConnection::sendIndicationToApp(int code)
+void TCPConnection::sendIndicationToApp(int code, const int id)
 {
     tcpEV << "Notifying app: " << indicationName(code) << "\n";
     cMessage *msg = new cMessage(indicationName(code));
     msg->setKind(code);
     TCPCommand *ind = new TCPCommand();
     ind->setConnId(connId);
+    ind->setUserId(id);
     msg->setControlInfo(ind);
     sendToApp(msg);
 }
@@ -660,6 +663,16 @@ void TCPConnection::sendSegment(uint32 bytes)
 
     // send it
     sendToIP(tcpseg);
+
+    // let application fill queue again, if there is space
+    const uint32 alreadyQueued = sendQueue->getBytesAvailable(sendQueue->getBufferStartSeq());
+    const uint32 abated        = (state->sendQueueLimit > alreadyQueued) ? state->sendQueueLimit - alreadyQueued : 0;
+    if ((state->sendQueueLimit > 0) && !state->queueUpdate && (abated >= state->snd_mss)) // request more data if space >= 1 MSS
+    {
+        // Tell upper layer readiness to accept more data
+        sendIndicationToApp(TCP_I_SEND_MSG, abated);
+        state->queueUpdate = true;
+    }
 }
 
 bool TCPConnection::sendData(bool fullSegmentsOnly, uint32 congestionWindow)
